# cpp_example_design_patterns

./: CMakeLists.txt  Dockerfile  Makefile  README.md  SPEC.md  ai.txt  llms-full.txt
k8s/: deployment.yaml
src/: padroes.cpp
tests/: test_core.cpp
